--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ configuration: Release
 before_build:
   - cmd: nuget restore
 build:
+  project: src/SequencedAggregate.sln
   verbosity: minimal
 test:
   assemblies:
