--- a/src/SequencedAggregate/SequencedAggregate.csproj
+++ b/src/SequencedAggregate/SequencedAggregate.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NEventStore, Version=5.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NEventStore.5.2.0\lib\net40\NEventStore.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,11 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SequencedAggregate.cs" />
-    <Compile Include="IDomainEvent.cs" />
+    <Compile Include="EventMessages.cs" />
+    <Compile Include="IDomainRepository.cs" />
+    <Compile Include="ISequencedEventStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SequencedEvent.cs" />
+    <Compile Include="SequenceConstants.cs" />
+    <Compile Include="SequenceException.cs" />
     <Compile Include="Sequencer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
