--- a/src/SequencedAggregate.Tests.Unit/SequencedAggregate.Tests.Unit.csproj
+++ b/src/SequencedAggregate.Tests.Unit/SequencedAggregate.Tests.Unit.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EventMessageTests.cs" />
     <Compile Include="SequencerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEvent.cs" />
