Updated the app.config to see if that is the error...

--- a/src/SequencedAggregate.Tests.Acceptance/App.config
+++ b/src/SequencedAggregate.Tests.Acceptance/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="SequencedAggregate.AcceptanceTests" connectionString="Server=(local)\SQLEXPRESS; Initial Catalog=SequencedAggregate.Acceptance; Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SequencedAggregate.AcceptanceTests" connectionString="Server=(local)\SQL2014;Initial Catalog=SequencedAggregate.Acceptance;User ID=sa;Password=Password12!" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
