Removed dot in CREATE DATABASE

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ build:
   project: src/SequencedAggregate.sln
   verbosity: minimal
 before_test:
-  - cmd: sqlcmd -S localhost,1433 -U sa -P Password12! -Q "CREATE DATABASE SequencedAggregate.Acceptance" -d "master"
+  - cmd: sqlcmd -S localhost,1433 -U sa -P Password12! -Q "CREATE DATABASE Acceptance" -d "master"
 test:
   assemblies:
   - 'SequencedAggregate.Tests.Unit.dll'
