--- a/src/SequencedAggregate.Tests.Acceptance/SequencedAggregate.Tests.Acceptance.csproj
+++ b/src/SequencedAggregate.Tests.Acceptance/SequencedAggregate.Tests.Acceptance.csproj
@@ -49,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcceptanceTests.cs" />
+    <Compile Include="Increment.cs" />
+    <Compile Include="Incremented.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserEmailUpdated.cs" />
