--- a/src/SequencedAggregate.Tests.Acceptance/SequencedAggregate.Tests.Acceptance.csproj
+++ b/src/SequencedAggregate.Tests.Acceptance/SequencedAggregate.Tests.Acceptance.csproj
@@ -51,6 +51,7 @@
     <Compile Include="AcceptanceTests.cs" />
     <Compile Include="Increment.cs" />
     <Compile Include="Incremented.cs" />
+    <Compile Include="IncrementRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserEmailUpdated.cs" />
