--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,11 @@
 version: 1.0.{build}
 configuration: Release
+assembly_info:
+  patch: true
+  file: '**\AssemblyInfo.*'
+  assembly_version: %APPVEYOR_BUILD_VERSION%
+  assembly_file_version: %APPVEYOR_BUILD_VERSION%
+  assembly_informational_version: %APPVEYOR_BUILD_VERSION%
 before_build:
   - cmd: cd src 
   - cmd: nuget restore
@@ -14,3 +20,9 @@ test:
   - 'SequencedAggregate.Tests.Acceptance.dll'
 services:
   - mssql2014
+deploy:
+  provider: NuGet
+  api_key:
+    secure: Cn+HK5O+bcpCL3ByqeQyfeysjGapaXDtEsbYgWOtR39oCx3TbVFa8eaKY5jyFS1W
+  skip_symbols: false
+  artifact: /.*\.nupkg/
