--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,9 +3,9 @@ configuration: Release
 assembly_info:
   patch: true
   file: '**\AssemblyInfo.*'
-  assembly_version: %APPVEYOR_BUILD_VERSION%
-  assembly_file_version: %APPVEYOR_BUILD_VERSION%
-  assembly_informational_version: %APPVEYOR_BUILD_VERSION%
+  assembly_version: '%APPVEYOR_BUILD_VERSION%'
+  assembly_file_version: '%APPVEYOR_BUILD_VERSION%'
+  assembly_informational_version: '%APPVEYOR_BUILD_VERSION%'
 before_build:
   - cmd: cd src 
   - cmd: nuget restore
