--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,4 +26,4 @@ deploy:
   api_key:
     secure: Cn+HK5O+bcpCL3ByqeQyfeysjGapaXDtEsbYgWOtR39oCx3TbVFa8eaKY5jyFS1W
   skip_symbols: false
-  artifact: 'C:\projects\sequencedaggregate\src\SequencedAggregate.1.0.40.nupkg'
+  artifact: '**\*.nupkg'
