--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,8 @@ test:
   - 'SequencedAggregate.Tests.Unit.dll'
   - 'SequencedAggregate.Tests.Acceptance.dll'
 after_build: nuget pack SequencedAggregate\SequencedAggregate.csproj -Version %APPVEYOR_BUILD_VERSION%
+artifacts:
+  - path: '**\*.nupkg'
 services:
   - mssql2014
 deploy:
@@ -26,4 +28,4 @@ deploy:
   api_key:
     secure: Cn+HK5O+bcpCL3ByqeQyfeysjGapaXDtEsbYgWOtR39oCx3TbVFa8eaKY5jyFS1W
   skip_symbols: false
-  artifact: /.*\.nupkg/
+  artifact: SequencedAggregate*.nupkg
