--- a/src/SequencedAggregate/SequencedAggregate.csproj
+++ b/src/SequencedAggregate/SequencedAggregate.csproj
@@ -30,12 +30,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=4.2.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.4.2.1\lib\net45\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NEventStore, Version=5.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NEventStore.5.2.0\lib\net40\NEventStore.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,7 +54,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AggregateBase.cs" />
+    <Compile Include="AggregateRepository.cs" />
+    <Compile Include="IAggregate.cs" />
+    <Compile Include="IAggregateRepository.cs" />
+    <Compile Include="IProjectionBuilder.cs" />
+    <Compile Include="IProjectionRepository.cs" />
+    <Compile Include="IViewRepository.cs" />
+    <Compile Include="SqlServerViewRepository.cs" />
     <Compile Include="EventMessages.cs" />
+    <Compile Include="ProjectionBuilderBase.cs" />
+    <Compile Include="ProjectionRepository.cs" />
+    <Compile Include="SequencedAggregateConfiguration.cs" />
+    <Compile Include="SequencedAggregateModule.cs" />
     <Compile Include="SequencedNEventStore.cs" />
     <Compile Include="ISequencedEventStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
