--- a/src/SequencedAggregate.Tests.Acceptance/SequencedAggregate.Tests.Acceptance.csproj
+++ b/src/SequencedAggregate.Tests.Acceptance/SequencedAggregate.Tests.Acceptance.csproj
@@ -49,13 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcceptanceTests.cs" />
-    <Compile Include="Increment.cs" />
     <Compile Include="Incremented.cs" />
-    <Compile Include="IncrementRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
+    <Compile Include="TestEventBase.cs" />
     <Compile Include="UserEmailUpdated.cs" />
-    <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
