--- a/src/SequencedAggregate.Tests.Unit/SequencedAggregate.Tests.Unit.csproj
+++ b/src/SequencedAggregate.Tests.Unit/SequencedAggregate.Tests.Unit.csproj
@@ -48,10 +48,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\CompanyCategoryUpdated.cs" />
+    <Compile Include="Events\CompanyCreated.cs" />
+    <Compile Include="CompanyNamesProjectionBuilder.cs" />
+    <Compile Include="CompanyNamesView.cs" />
+    <Compile Include="Events\CompanyNameUpdated.cs" />
+    <Compile Include="CompanyProjectionBuilder.cs" />
+    <Compile Include="CompanyView.cs" />
+    <Compile Include="Events\EventBase.cs" />
     <Compile Include="EventMessageTests.cs" />
+    <Compile Include="ProjectionBuilderTests.cs" />
     <Compile Include="SequencerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestEvent.cs" />
+    <Compile Include="TestCompanyViewRepository.cs" />
+    <Compile Include="Events\TestEvent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
