--- a/src/SequencedAggregate.Tests.Integration/SequencedAggregate.Tests.Integration.csproj
+++ b/src/SequencedAggregate.Tests.Integration/SequencedAggregate.Tests.Integration.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9F167FA6-5B1C-4F55-9FAB-B66DFD3ADE07}</ProjectGuid>
+    <ProjectGuid>{333C62C4-3C5D-4397-9B65-6BB56C5E8AF3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SequencedAggregate.Tests.Acceptance</RootNamespace>
-    <AssemblyName>SequencedAggregate.Tests.Acceptance</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <RootNamespace>SequencedAggregate.Tests.Integration</RootNamespace>
+    <AssemblyName>SequencedAggregate.Tests.Integration</AssemblyName>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -30,14 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=4.2.1.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Autofac.4.2.1\lib\net45\Autofac.dll</HintPath>
-    </Reference>
-    <Reference Include="NEventStore, Version=5.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NEventStore.5.2.0\lib\net40\NEventStore.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
@@ -52,15 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AcceptanceTestsBase.cs" />
-    <Compile Include="SequencedNEventStoreTests.cs" />
-    <Compile Include="CompanyView.cs" />
-    <Compile Include="Incremented.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SqlViewRepositoryTests.cs" />
-    <Compile Include="TestEventBase.cs" />
-    <Compile Include="TransactionTests.cs" />
-    <Compile Include="UserEmailUpdated.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
