Changed to only one connection string, since it is going to be the same anyway to be able to use ambient transactions

--- a/src/SequencedAggregate.Tests.Unit/packages.config
+++ b/src/SequencedAggregate.Tests.Unit/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NEventStore" version="5.2.0" targetFramework="net452" />
+  <package id="NServiceBus" version="6.1.1" targetFramework="net452" />
+  <package id="NServiceBus.Testing" version="6.0.1" targetFramework="net452" />
+  <package id="NSubstitute" version="1.10.0.0" targetFramework="net452" />
   <package id="NUnit" version="3.5.0" targetFramework="net452" />
 </packages>
