--- a/src/Messages/SequencedAggregate.Tests.Unit.Messages.csproj
+++ b/src/Messages/SequencedAggregate.Tests.Unit.Messages.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B98E30D0-5DBA-403C-8A2A-9F05E44D29F5}</ProjectGuid>
+    <ProjectGuid>{06E21267-E2D4-4E73-8E35-C7AAC5339F33}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SequencedAggregate.Tests.Unit</RootNamespace>
-    <AssemblyName>SequencedAggregate.Tests.Unit</AssemblyName>
+    <RootNamespace>SequencedAggregate.Tests.Unit.Messages</RootNamespace>
+    <AssemblyName>SequencedAggregate.Tests.Unit.Messages</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,18 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NEventStore, Version=5.2.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NEventStore.5.2.0\lib\net40\NEventStore.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NSubstitute, Version=1.10.0.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
-      <HintPath>..\packages\NSubstitute.1.10.0.0\lib\net45\NSubstitute.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -53,31 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Events\CompanyCategoryUpdated.cs" />
-    <Compile Include="Events\CompanyCreated.cs" />
-    <Compile Include="CompanyNamesProjectionBuilder.cs" />
-    <Compile Include="CompanyNamesView.cs" />
-    <Compile Include="Events\CompanyNameUpdated.cs" />
-    <Compile Include="CompanyProjectionBuilder.cs" />
-    <Compile Include="CompanyView.cs" />
-    <Compile Include="Events\EventBase.cs" />
-    <Compile Include="EventMessageTests.cs" />
-    <Compile Include="ProjectionBuilderTests.cs" />
-    <Compile Include="SequencerTests.cs" />
+    <Compile Include="SomeMessageCatalogMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestCompanyViewRepository.cs" />
-    <Compile Include="Events\TestEvent.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SequencedAggregate\SequencedAggregate.csproj">
-      <Project>{6A43EE69-8D18-4086-8744-A068CEB7FC6A}</Project>
-      <Name>SequencedAggregate</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
