--- a/src/SequencedAggregate/packages.config
+++ b/src/SequencedAggregate/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.2.1" targetFramework="net46" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net452" />
   <package id="NEventStore" version="5.2.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
